--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,6 +14,10 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - name: Install Conan
+      shell: cmd
+      run: pip install conan
+
     - name: Configure
       shell: cmd
       run: cmake -DCMAKE_BUILD_TYPE:STRING=RelWithDebInfo -B build -G "Visual Studio 16 2019" -T host=x64 -A x64
