--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -14,6 +14,9 @@ jobs:
 
     - uses: actions/checkout@v2
     
+    - name: Install libs
+      run: sudo apt-get install -y libgl-dev
+      
     - name: Install Conan
       run: pip install conan
 
